--- a/container/karaf/src/main/filtered-resources/etc/custom.properties
+++ b/container/karaf/src/main/filtered-resources/etc/custom.properties
@@ -793,6 +793,7 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         org.springframework.security.access.intercept;version=${springSecurityVersion},\
         org.springframework.security.access.intercept.aopalliance;version=${springSecurityVersion},\
         org.springframework.security.access.intercept.aspectj;version=${springSecurityVersion},\
+        org.springframework.security.access.intercept.aspectj.aspect;version=${springSecurityVersion},\
         org.springframework.security.access.method;version=${springSecurityVersion},\
         org.springframework.security.access.prepost;version=${springSecurityVersion},\
         org.springframework.security.access.vote;version=${springSecurityVersion},\
@@ -827,15 +828,22 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         org.springframework.security.config.annotation.web.configuration;version=${springSecurityVersion},\
         org.springframework.security.config.annotation.web.configurers;version=${springSecurityVersion},\
         org.springframework.security.config.annotation.web.configurers.openid;version=${springSecurityVersion},\
+        org.springframework.security.config.annotation.web.messaging;version=${springSecurityVersion},\
         org.springframework.security.config.annotation.web.servlet;version=${springSecurityVersion},\
         org.springframework.security.config.annotation.web.servlet.configuration;version=${springSecurityVersion},\
+        org.springframework.security.config.annotation.web.socket;version=${springSecurityVersion},\
         org.springframework.security.config.authentication;version=${springSecurityVersion},\
+        org.springframework.security.config;version=${springSecurityVersion},\
+        org.springframework.security.config.core;version=${springSecurityVersion},\
         org.springframework.security.config.debug;version=${springSecurityVersion},\
         org.springframework.security.config.http;version=${springSecurityVersion},\
         org.springframework.security.config.ldap;version=${springSecurityVersion},\
         org.springframework.security.config.method;version=${springSecurityVersion},\
+        org.springframework.security.config;version=${springSecurityVersion},\
+        org.springframework.security.config.websocket;version=${springSecurityVersion},\
         org.springframework.security.context;version=${springSecurityVersion},\
         org.springframework.security.core;version=${springSecurityVersion},\
+        org.springframework.security.core.annotation;version=${springSecurityVersion},\
         org.springframework.security.core.authority;version=${springSecurityVersion},\
         org.springframework.security.core.authority.mapping;version=${springSecurityVersion},\
         org.springframework.security.core.context;version=${springSecurityVersion},\
@@ -850,9 +858,12 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         org.springframework.security.crypto.bcrypt;version=${springSecurityVersion},\
         org.springframework.security.crypto.codec;version=${springSecurityVersion},\
         org.springframework.security.crypto.encrypt;version=${springSecurityVersion},\
+        org.springframework.security.crypto.factory;version=${springSecurityVersion},\
         org.springframework.security.crypto.keygen;version=${springSecurityVersion},\
         org.springframework.security.crypto.password;version=${springSecurityVersion},\
+        org.springframework.security.crypto.scrypt;version=${springSecurityVersion},\
         org.springframework.security.crypto.util;version=${springSecurityVersion},\
+        org.springframework.security.jackson2;version=${springSecurityVersion},\
         org.springframework.security.kerberos;version=${springSecurityKerberosVersion},\
         org.springframework.security.kerberos.authentication;version=${springSecurityKerberosVersion},\
         org.springframework.security.kerberos.authentication.sun;version=${springSecurityKerberosVersion},\
@@ -861,13 +872,14 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         org.springframework.security.kerberos.client.ldap;version=${springSecurityKerberosVersion},\
         org.springframework.security.kerberos.web;version=${springSecurityKerberosVersion},\
         org.springframework.security.kerberos.web.authentication;version=${springSecurityKerberosVersion},\
-        org.springframework.security.ldap;version=${springLdapVersion},\
-        org.springframework.security.ldap.authentication;version=${springLdapVersion},\
-        org.springframework.security.ldap.authentication.ad;version=${springLdapVersion},\
-        org.springframework.security.ldap.ppolicy;version=${springLdapVersion},\
-        org.springframework.security.ldap.search;version=${springLdapVersion},\
-        org.springframework.security.ldap.server;version=${springLdapVersion},\
-        org.springframework.security.ldap.userdetails;version=${springLdapVersion},\
+        org.springframework.security.ldap;version=${springSecurityVersion},\
+        org.springframework.security.ldap.authentication;version=${springSecurityVersion},\
+        org.springframework.security.ldap.authentication.ad;version=${springSecurityVersion},\
+        org.springframework.security.ldap.ppolicy;version=${springSecurityVersion},\
+        org.springframework.security.ldap.search;version=${springSecurityVersion},\
+        org.springframework.security.ldap.server;version=${springSecurityVersion},\
+        org.springframework.security.ldap.userdetails;version=${springSecurityVersion},\
+        org.springframework.security;version=${springSecurityVersion},\
         org.springframework.security.provisioning;version=${springSecurityVersion},\
         org.springframework.security.remoting;version=${springSecurityVersion},\
         org.springframework.security.remoting.dns;version=${springSecurityVersion},\
@@ -877,7 +889,6 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         org.springframework.security.taglibs;version=${springSecurityVersion},\
         org.springframework.security.taglibs.authz;version=${springSecurityVersion},\
         org.springframework.security.taglibs.csrf;version=${springSecurityVersion},\
-        org.springframework.security.taglibs.velocity;version=${springSecurityVersion},\
         org.springframework.security.task;version=${springSecurityVersion},\
         org.springframework.security.util;version=${springSecurityVersion},\
         org.springframework.security.web;version=${springSecurityVersion},\
@@ -902,6 +913,7 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         org.springframework.security.web.context;version=${springSecurityVersion},\
         org.springframework.security.web.context.request;version=${springSecurityVersion},\
         org.springframework.security.web.context.request.async;version=${springSecurityVersion},\
+        org.springframework.security.web.context.support;version=${springSecurityVersion},\
         org.springframework.security.web.csrf;version=${springSecurityVersion},\
         org.springframework.security.web.debug;version=${springSecurityVersion},\
         org.springframework.security.web.firewall;version=${springSecurityVersion},\
@@ -909,10 +921,15 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         org.springframework.security.web.header.writers;version=${springSecurityVersion},\
         org.springframework.security.web.header.writers.frameoptions;version=${springSecurityVersion},\
         org.springframework.security.web.jaasapi;version=${springSecurityVersion},\
+        org.springframework.security.web.jackson2;version=${springSecurityVersion},\
+        org.springframework.security.web.method;version=${springSecurityVersion},\
+        org.springframework.security.web.method.annotation;version=${springSecurityVersion},\
         org.springframework.security.web.savedrequest;version=${springSecurityVersion},\
         org.springframework.security.web.servlet;version=${springSecurityVersion},\
         org.springframework.security.web.servlet.support;version=${springSecurityVersion},\
         org.springframework.security.web.servlet.support.csrf;version=${springSecurityVersion},\
+        org.springframework.security.web.servlet.util;version=${springSecurityVersion},\
+        org.springframework.security.web.servlet.util.matcher;version=${springSecurityVersion},\
         org.springframework.security.web.servletapi;version=${springSecurityVersion},\
         org.springframework.security.web.session;version=${springSecurityVersion},\
         org.springframework.security.web.util;version=${springSecurityVersion},\
