--- a/container/shared/src/main/filtered-resources/etc/blacklisted.properties
+++ b/container/shared/src/main/filtered-resources/etc/blacklisted.properties
@@ -1,4 +1,4 @@
-# replaced by explicit `spring-security32`
+# replaced by explicit `spring-security-opennms`
 spring-security
 
 # no karaf Spring repos
