--- a/core/snmp/api/pom.xml
+++ b/core/snmp/api/pom.xml
@@ -30,6 +30,10 @@
   </build>
   <dependencies>
     <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
