--- a/smoke-test/pom.xml
+++ b/smoke-test/pom.xml
@@ -55,6 +55,7 @@
     <frontendPluginVersion>0.0.29</frontendPluginVersion>
     <jackson2Version>2.14.2</jackson2Version>
     <jersey.version>2.36</jersey.version>
+    <junit5Version>5.9.2</junit5Version>
     <karafVersion>4.3.6</karafVersion>
     <selenium.version>4.6.0</selenium.version>
     <!-- seleniarm.version needs to match a date stamped release version from the docker-seleniarm releases page
@@ -551,19 +552,19 @@
     <dependency>
       <groupId>org.junit.vintage</groupId>
       <artifactId>junit-vintage-engine</artifactId>
-      <version>5.9.2</version>
+      <version>${junit5Version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-      <version>5.8.2</version>
+      <version>${junit5Version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-migrationsupport</artifactId>
-      <version>5.9.2</version>
+      <version>${junit5Version}</version>
       <scope>compile</scope>
     </dependency>
 
