--- a/opennms-base-assembly/src/main/filtered/etc/opennms.service
+++ b/opennms-base-assembly/src/main/filtered/etc/opennms.service
@@ -5,6 +5,7 @@ Requires=network.target network-online.target
 After=${install.postgresql.service}.service postgresql-10.service postgresql-11.service postgresql-12.service postgresql-13.service network.target network-online.target
 
 [Service]
+AmbientCapabilities=CAP_NET_RAW CAP_NET_BIND_SERVICE
 User=opennms
 Environment="OPENNMS_HOME=${install.dir}"
 
