--- a/core/ipc/common/kafka/pom.xml
+++ b/core/ipc/common/kafka/pom.xml
@@ -46,7 +46,7 @@
       </dependency>
       <dependency>
         <groupId>org.osgi</groupId>
-        <artifactId>osgi.cmpn</artifactId>
+        <artifactId>org.osgi.service.cm</artifactId>
       </dependency>
       <dependency>
         <!-- This is required for the JmsQueueNameFactory -->
