--- a/features/vaadin-dashboard/pom.xml
+++ b/features/vaadin-dashboard/pom.xml
@@ -103,17 +103,23 @@
 
     <dependencies>
         <!-- OSGi Dependencies -->
+
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>osgi.core</artifactId>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>osgi.cmpn</artifactId>
+            <artifactId>org.osgi.service.cm</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.service.blueprint</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- Vaadin Dependencies -->
 
         <dependency>
