--- a/core/ipc/grpc/server/pom.xml
+++ b/core/ipc/grpc/server/pom.xml
@@ -33,8 +33,7 @@
   <dependencies>
     <dependency>
       <groupId>org.osgi</groupId>
-      <artifactId>osgi.cmpn</artifactId>
-      <scope>provided</scope>
+      <artifactId>org.osgi.service.cm</artifactId>
     </dependency>
     <dependency>
       <groupId>io.grpc</groupId>
