--- a/core/ipc/twin/grpc/common/pom.xml
+++ b/core/ipc/twin/grpc/common/pom.xml
@@ -63,8 +63,7 @@
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>osgi.cmpn</artifactId>
-            <scope>provided</scope>
+            <artifactId>org.osgi.service.cm</artifactId>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
