--- a/features/bsm/vaadin-adminpage/pom.xml
+++ b/features/bsm/vaadin-adminpage/pom.xml
@@ -65,7 +65,12 @@
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>osgi.cmpn</artifactId>
+            <artifactId>org.osgi.service.cm</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.service.blueprint</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
