--- a/features/container/sentinel/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/features/container/sentinel/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -78,7 +78,7 @@ featuresBootAsynchronous=false
 #
 # Define if the feature service automatically refreshes bundles
 #
-autoRefresh=false
+autoRefresh=true
 
 #
 # Service requirements enforcement
