NMS-15707: Upgrade Karaf to latest 4.4.x
* Re-enable autoRefresh

--- a/container/karaf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/container/karaf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -47,7 +47,7 @@ featuresBoot = ( \
     shell-compat,/${karafVersion} \
     deployer/${karafVersion}, \
     diagnostic/${karafVersion}, \
-    wrap/2.6.10, \
+    wrap/2.6.12, \
     bundle/${karafVersion}, \
     config/${karafVersion}, \
     kar/${karafVersion}, \
@@ -153,7 +153,7 @@ featuresBootAsynchronous=false
 #
 # Define if the feature service automatically refreshes bundles
 #
-autoRefresh=false
+autoRefresh=true
 
 #
 # Service requirements enforcement
