--- a/pom.xml
+++ b/pom.xml
@@ -1643,7 +1643,7 @@
     <elasticsearchNettyVersion>${netty4Version}</elasticsearchNettyVersion>
     <elasticsearchDriftPluginVersion>2.0.5</elasticsearchDriftPluginVersion>
     <elasticsearchTargetVersion>7.17.9</elasticsearchTargetVersion>
-    <felixConfigadminVersion>1.9.22</felixConfigadminVersion>
+    <felixConfigadminVersion>1.9.26</felixConfigadminVersion>
     <felixBridgeVersion>4.1.6</felixBridgeVersion>
     <felixProxyVersion>3.0.6</felixProxyVersion>
     <fopVersion>2.9</fopVersion>
@@ -1727,7 +1727,7 @@
     <junit4Version>4.13.2</junit4Version>
     <junit5Version>5.9.2</junit5Version>
     <junit5PlatformVersion>1.9.2</junit5PlatformVersion>
-    <karafVersion>4.3.10</karafVersion>
+    <karafVersion>4.4.4</karafVersion>
     <!-- BEGIN: versions must match versions provided by embedded Karaf -->
     <felixCmJsonVersion>1.0.6</felixCmJsonVersion>
     <felixConfigadminVersion>1.9.26</felixConfigadminVersion>
@@ -1739,10 +1739,10 @@
     <felixMetatypeVersion>1.2.4</felixMetatypeVersion>
     <jansiVersion>2.4.0</jansiVersion>
     <osgiUtilVersion>1.2.0</osgiUtilVersion>
-    <paxLoggingVersion>2.0.19</paxLoggingVersion>
+    <paxLoggingVersion>2.2.3</paxLoggingVersion>
     <paxSwissboxVersion>1.8.5</paxSwissboxVersion>
     <paxUrlAetherVersion>2.6.14</paxUrlAetherVersion>
-    <paxWebVersion>7.3.29</paxWebVersion>
+    <paxWebVersion>8.0.22</paxWebVersion>
     <slingJohnzonVersion>1.2.16</slingJohnzonVersion>
     <!-- END: versions must match versions provided by embedded Karaf -->
     <kafkaBundleVersion>3.5.1_1</kafkaBundleVersion>
@@ -1771,10 +1771,8 @@
     <okioVersion>3.6.0</okioVersion>
     <opennmsApiVersion>1.6.0</opennmsApiVersion>
     <opennmsApiVersionOsgi>1.6.0</opennmsApiVersionOsgi>
-    <osgiVersion>7.0.0</osgiVersion>
-    <osgiAnnotationVersion>7.0.0</osgiAnnotationVersion>
-    <osgiCompendiumVersion>7.0.0</osgiCompendiumVersion>
-    <osgiEnterpriseVersion>7.0.0</osgiEnterpriseVersion>
+    <osgiVersion>8.0.0</osgiVersion>
+    <osgiAnnotationVersion>8.0.0</osgiAnnotationVersion>
     <owaspEncoderVersion>1.2.3</owaspEncoderVersion>
     <owaspHtmlSanitizerVersion>20170515.1</owaspHtmlSanitizerVersion>
     <osgiJaxRsVersion>1.1.0.ONMS</osgiJaxRsVersion>
@@ -4719,18 +4717,23 @@
       </dependency>
       <dependency>
         <groupId>org.osgi</groupId>
-        <artifactId>osgi.cmpn</artifactId>
-        <version>${osgiCompendiumVersion}</version>
+        <artifactId>org.osgi.service.blueprint</artifactId>
+        <version>1.0.2</version>
+      </dependency>
+      <dependency>
+        <groupId>org.osgi</groupId>
+        <artifactId>org.osgi.service.cm</artifactId>
+        <version>1.6.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.osgi</groupId>
+        <artifactId>org.osgi.service.component.annotations</artifactId>
+        <version>1.5.1</version>
       </dependency>
       <dependency>
         <groupId>org.osgi</groupId>
         <artifactId>osgi.annotation</artifactId>
         <version>${osgiAnnotationVersion}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.osgi</groupId>
-        <artifactId>osgi.enterprise</artifactId>
-        <version>${osgiEnterpriseVersion}</version>
       </dependency>
       <dependency>
         <groupId>org.jolokia</groupId>
