NMS-15514: Upgrade to Newts 3.0.0 (#5939)
* NMS-15514: Upgrade to Newts 3.0.0

* Upgrades the DataStax Java Driver to 4.15.0 from (3.11.2)
* Upgrades Guava to 31.1-jre (from 25.1-jre)
* Upgrades Dropwizard Metrics to 4.2.10 (from 3.1.2)
* Upgrades Bouncycastle to 1.72 (from 1.68)

* NMS-15514: Fix misleading log message when using the driver-settings-file

* NMS-15514: Adjust MBean references changed by metrics-jmx upgrade

Hopefully caught them all, compared names with those observed in Hawtio

* NMS-15514: Add notes and breaking changes.

* NMS-15514: Apply suggestions from code review

Co-authored-by: Emily <107147744+emarsh1995@users.noreply.github.com>

* NMS-15514: Upgrade to Newts 3.0.0 release artifacts

---------

Co-authored-by: Jesse White <jesse@opennms.com>
Co-authored-by: Emily <107147744+emarsh1995@users.noreply.github.com>

--- a/dependencies/newts/pom.xml
+++ b/dependencies/newts/pom.xml
@@ -54,8 +54,8 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>com.datastax.cassandra</groupId>
-      <artifactId>cassandra-driver-core</artifactId>
+      <groupId>com.datastax.oss</groupId>
+      <artifactId>java-driver-core</artifactId>
       <version>${cassandraVersion}</version>
     </dependency>
     <dependency>
