NMS-15481: Usage Stats Sharing UI: Initial UI page and API wireup

--- a/ui/package.json
+++ b/ui/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build --base=/opennms/ui/",
+    "watch": "vue-tsc --noEmit && vite build --base=/opennms/ui/ --watch",
     "serve": "vite preview",
     "test": "vitest run",
     "lint": "eslint --ignore-path ../.gitignore --ext .ts,.vue .",
