--- a/container/karaf/pom.xml
+++ b/container/karaf/pom.xml
@@ -40,6 +40,10 @@
                 <version>${karafVersion}</version>
                 <extensions>true</extensions>
                 <configuration>
+                    <blacklistedRepositories>
+                        <!-- make sure the karaf standard repo doesn't make it in -->
+                        <repository>mvn:org.apache.karaf.features/standard/${karafVersion}/xml/features</repository>
+                    </blacklistedRepositories>
                     <bootRepositories>
                         <!-- OPENNMS: Replace the standard and spring-legacy features files with our modified versions -->
                         <repository>mvn:org.opennms.karaf/opennms/${project.version}/xml/standard</repository>
@@ -100,7 +104,7 @@
                         <library>mvn:org.apache.servicemix.specs/org.apache.servicemix.specs.stax-api-1.2/${karaf.servicemix.specs.version};type:=endorsed;export:=true</library>
                         <library>mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.xalan/${xalanServicemixVersion};type:=endorsed;export:=true</library>
                         <library>mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.xalan-serializer/${xalanServicemixVersion};type:=endorsed;export:=true</library>
-                        <library>mvn:javax.annotation/javax.annotation-api/1.2;type:=endorsed;export:=true</library>
+                        <library>mvn:javax.annotation/javax.annotation-api/1.3;type:=endorsed;export:=true</library>
 
                         <library>mvn:org.apache.servicemix.specs/org.apache.servicemix.specs.activator/${karaf.servicemix.specs.version};type:=default;export:=true</library>
                         <library>mvn:org.apache.servicemix.specs/org.apache.servicemix.specs.locator/${karaf.servicemix.specs.version};type:=default;export:=true</library>
