--- a/opennms-install/pom.xml
+++ b/opennms-install/pom.xml
@@ -103,6 +103,10 @@
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
+      <artifactId>opennms-config</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.opennms</groupId>
       <artifactId>opennms-config-model</artifactId>
     </dependency>
     <dependency>
