--- a/protocols/selenium-monitor/pom.xml
+++ b/protocols/selenium-monitor/pom.xml
@@ -178,7 +178,15 @@
     </dependency>
     <dependency>
         <groupId>org.ow2.asm</groupId>
-        <artifactId>asm-all</artifactId>
+        <artifactId>asm</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.ow2.asm</groupId>
+        <artifactId>asm-commons</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.ow2.asm</groupId>
+        <artifactId>asm-util</artifactId>
     </dependency>
     <dependency>
         <groupId>org.slf4j</groupId>
