NMS-14692: Allow destination paths to be triggered from the shell and from the WebUI

--- a/container/features/pom.xml
+++ b/container/features/pom.xml
@@ -822,5 +822,11 @@
       <type>pom</type>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.opennms.features.notifications</groupId>
+      <artifactId>org.opennms.features.notifications.shell</artifactId>
+      <version>${project.version}</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
