--- a/container/karaf/src/main/filtered-resources/etc/custom.properties
+++ b/container/karaf/src/main/filtered-resources/etc/custom.properties
@@ -1259,6 +1259,7 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         org.opennms.netmgt.filter.api;version=${opennms.osgi.version},\
         org.opennms.netmgt.graph.dao.api;version=${opennms.osgi.version},\
         org.opennms.netmgt.graph;version=${opennms.osgi.version},\
+        org.opennms.netmgt.notifd.api;version=${opennms.osgi.version},\
         org.json,\
         io.swagger.v3.oas.models;version=${swaggerVersion},\
         io.swagger.v3.oas.models.servers;version=${swaggerVersion},\
