--- a/container/karaf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/container/karaf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -98,6 +98,7 @@ featuresBoot = ( \
   opennms-jsonstore-shell,\
   opennms-threshold-states-shell,\
   opennms-measurements-shell,\
+  opennms-notifications-shell,\
   opennms-graphml,\
   opennms-graphs,\
   osgi-nrtg-local,\
