--- a/features/notifications/pom.xml
+++ b/features/notifications/pom.xml
@@ -12,6 +12,7 @@
   <name>OpenNMS :: Features :: Notification</name>
   <modules>
     <module>api</module>
+    <module>shell</module>
     <module>ticket-strategy</module>
   </modules>
 </project>
