--- a/opennms-full-assembly/pom.xml
+++ b/opennms-full-assembly/pom.xml
@@ -396,6 +396,7 @@
                 <feature>opennms-kafka-consumer</feature>
                 <feature>opennms-model</feature>
                 <feature>opennms-measurements-shell</feature>
+                <feature>opennms-notifications-shell</feature>
                 <feature>opennms-poller-shell</feature>
                 <feature>opennms-provisioning</feature>
                 <feature>opennms-provisioning-detectors</feature>
