NMS-15623: Use AVERAGE RRA

--- a/opennms-base-assembly/src/main/filtered/etc/snmp-graph.properties.d/opennms-graph.properties
+++ b/opennms-base-assembly/src/main/filtered/etc/snmp-graph.properties.d/opennms-graph.properties
@@ -161,7 +161,7 @@ report.onms.pollerd.inflight.columns=ONMSPollsInFlight
 report.onms.pollerd.inflight.type=interfaceSnmp
 report.onms.pollerd.inflight.command=--title="OpenNMS Pollerd Polls In Flight" \
  --vertical-label="In Flight" \
- DEF:inflight={rrd1}:ONMSPollsInFlight:MAX \
+ DEF:inflight={rrd1}:ONMSPollsInFlight:AVERAGE \
  LINE1:inflight#0000ff:"In Flight" \
  GPRINT:inflight:AVERAGE:" Avg  \\: %8.2lf %s" \
  GPRINT:inflight:MIN:"Min  \\: %8.2lf %s" \
